# EGA-Trek

./: .clang-format  .clang-tidy  .cppcheck  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci.yml
.natvis/: rapidjson.natvis  ryml.natvis  stl.natvis
app/: CMakeLists.txt
app/src/: ASGEGame.cpp  ASGEGame.hpp  main.cpp
gamelib/: CMakeLists.txt
gamelib/include/gamelib/: Button.hpp  EnergyBar.hpp  GameObject.hpp  Grid.hpp  Panel.hpp  game_component.hpp
gamelib/include/gamelib/Scenes/: LoseScene.hpp  MenuScene.hpp  SceneManager.hpp  WinScene.hpp
gamelib/include/gamelib/Ships/: Enemy.hpp  Player.hpp  Starship.hpp
gamelib/src/: Button.cpp  Enemy.cpp  EnergyBar.cpp  GameObject.cpp  Grid.cpp  LoseScene.cpp  MenuScene.cpp  Panel.cpp  Player.cpp  SceneManager.cpp  Starship.cpp  WinScene.cpp  game_component.cpp
